# sbtc-developer-release

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  rustfmt.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  enhancement-request.md  research.md  task.md
.github/workflows/: audit.yml  daily.yml  publish-to-dockerhub.yml  pull-request.yml  rust.yml
clarity/nakamoto/: Clarinet.toml  package-lock.json  package.json  tsconfig.json
clarity/nakamoto/contracts/: sbtc-controller.clar  sbtc-db.clar  sbtc-deposit.clar  sbtc-handoff.clar  sbtc-token.clar  sbtc-withdraw.clar
clarity/nakamoto/tests/: contract.test.ts
clarity/next/: .gitignore  package.json
clarity/romeo/asset-contract/: package-lock.json  tsconfig.json
devenv/: README.md  build.sh  common.sh  docker-compose.yml  down.sh  log.sh  min-docker-compose.yml  package-lock.json  package.json  up.sh
devenv/bitcoin/: build.sh  docker-compose-bitcoin.yml  down.sh  up.sh
devenv/bitcoin-explorer/: build.sh  docker-compose-bitcoin-explorer.yml  down.sh  up.sh
devenv/electrs/: build.sh  docker-compose-electrs.yml  down.sh  up.sh
devenv/integration/: README.md  docker-compose.yml
devenv/mempool/: README.md  docker-compose.yml
devenv/miner/: build.sh  docker-compose-miner.yml  down.sh  up.sh
devenv/mongodb/: docker-compose-mongodb.yml  down.sh  up.sh
devenv/sbtc/: build.sh  docker-compose-sbtc.yml  down.sh  up.sh
devenv/sbtc-bridge-api/: build.sh  docker-compose-sbtc-bridge-api.yml  down.sh  up.sh
devenv/sbtc-bridge-app/: build.sh  docker-compose-sbtc-bridge-app.yml  down.sh  up.sh
devenv/sbtc-bridge-web/: build.sh  docker-compose-sbtc-bridge-web.yml  down.sh  up.sh
devenv/stacks/: build.sh  docker-compose-stacks.yml  down.sh  up.sh
devenv/stacks-api/: build.sh  docker-compose-stacks-api.yml  down.sh  up.sh
devenv/stacks-explorer/: build.sh  docker-compose-stacks-explorer.yml  down.sh  up.sh
devenv/tests/: docker-compose.yml
devenv/utils/: deploy_contracts.sh  deposit.sh  get_credentials.sh  install.sh  mine_btc.sh  withdraw.sh
helpers/: broadcast.sh
romeo/: Cargo.toml  ContractManager.json  DepositProcessor.json  asset-token.json
romeo/asset-contract/: Clarinet.toml  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.js
romeo/asset-contract/contracts/: asset.clar  clarity-bitcoin-mini-deploy.clar  clarity-bitcoin-mini.clar
romeo/asset-contract/contracts/examples/: sbtc-send-many.clar
romeo/asset-contract/deployments/: default.devnet-plan.yaml  default.testnet-plan.yaml
romeo/asset-contract/ext/: generate-tests.ts
romeo/asset-contract/ext/utils/: clarity-parser.ts  generate.ts
romeo/asset-contract/scripts/: coverage-report.sh  generate-docs.ts  install_clarinet_action.sh  install_clarinet_ubuntu.sh  test.sh
romeo/asset-contract/settings/: Devnet.toml
romeo/asset-contract/tests/: RomeoCommandModel.ts  RomeoCommands.ts  RomeoGetBalanceCommand.ts  RomeoGetTotalSupplyCommand.ts  RomeoMintCommand.ts  RomeoTransferCommand.ts  RomeoTransferCommand_NonOwner.ts  asset.test.ts  asset_BurnCommand.ts  asset_BurnCommand_500.ts  asset_CommandModel.ts  asset_Commands.ts  asset_GetBalanceCommand.ts  asset_GetBitcoinWalletPublicKeyCommand.ts  asset_GetTotalSupplyCommand.ts  asset_MintCommand.ts  asset_MintCommand_500.ts  asset_SetBitcoinWalletPublicKeyCommand.ts  asset_SetBitcoinWalletPublicKeyCommand_NonOwner.ts  asset_TransferCommand.ts  asset_TransferCommand_NonOwner.ts  asset_test.clar  asset_test.ts  bootstrap.ts  clarity-bitcoin-mini-deploy.test.ts  clarity-bitcoin-mini_test.clar  sbtc-send-many_test.clar
romeo/examples/: deposit_withdrawal.rs  fund.rs
romeo/src/: actor.rs  bitcoin_client.rs  bitcoin_client_with_explorer_api.rs  config.rs  contract_deployer.rs  deposit.rs  event.rs  lib.rs  main.rs  proof.rs  proof_data.rs  stacks_client.rs  state.rs  store.rs  system.rs  task.rs
romeo/src/bitcoin_client/: client.rs  esplora.rs  esplora_client.rs  mod.rs  rpc.rs  rpc_client.rs
romeo/src/state/: mod.rs  transaction_request.rs
romeo/src/test/: mod.rs
romeo/testing/: config.json
romeo/tests/: bitcoin_client_integration.rs  deposit_integration.rs
romeo/tests/tests/: bitcoin_client.rs  deposit.rs  mod.rs  stacks_client.rs  withdrawal.rs
sbtc-cli/: Cargo.toml  README.md  generated_config.toml
sbtc-cli/src/: config.rs  main.rs
sbtc-cli/src/commands/: broadcast.rs  deposit.rs  generate.rs  init.rs  mod.rs  utils.rs  withdraw.rs
sbtc-core/: Cargo.toml  README.md
sbtc-core/src/: lib.rs
sbtc-core/src/operations/: mod.rs  utils.rs
sbtc-core/src/operations/commit_reveal/: construction.rs  deposit.rs  mod.rs  utils.rs  withdrawal_request.rs
sbtc-core/src/operations/construction/: deposit.rs  mod.rs  utils.rs  withdrawal_request.rs
sbtc-core/src/operations/op_return/: deposit.rs  mod.rs  utils.rs  withdrawal_fulfillment.rs  withdrawal_request.rs
sbtc-core/src/operations/op_return/construction/: deposit.rs  mod.rs  utils.rs  withdrawal_request.rs
sbtc-core/src/operations/op_return/parsing/: deposit.rs  mod.rs
sbtc-core/src/operations/parsing/: deposit.rs  mod.rs  withdrawal_fulfillment.rs  withdrawal_request.rs
sbtc-core/src/signer/: config.rs  main.rs  mod.rs
sbtc-core/src/signer/blockchain/: mod.rs
sbtc-core/src/signer/coordinator/: fire.rs  mod.rs  roast.rs
sbtc-core/src/utils/: contract_name.rs  mod.rs
sbtc-core/src/wireformat/: deposit.rs  mod.rs  withdrawal_fullfillment.rs  withdrawal_request.rs
stacks-core/: Cargo.toml  README.md
stacks-core/src/: address.rs  c32.rs  codec.rs  contract_name.rs  credentials.rs  crypto.rs  lib.rs  uint.rs  utils.rs  wallet.rs
stacks-core/src/crypto/: hash.rs  hash160.rs  mod.rs  sha256.rs  wif.rs
stacks-core/src/serialize/: amount.rs  mod.rs  recoverable_signature.rs
stacks-core/src/transaction/: mod.rs  payload.rs  token_transfer_memo.rs
stacks-core/src/validated_strings/: clarity_name.rs  contract_name.rs  mod.rs  stacks_string.rs
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
(+44 files in other folders)
