[workspace]
members = ["sbtc-core", "stacks-core"]

[workspace.dependencies]
anyhow = "1.0"
array-bytes = "6.1.0"
bdk = "0.28.0"
bitcoin = "0.29.2"
clap = "4.1.1"
hex = "0.4.3"
log = "0.4.19"
once_cell = "1.18.0"
rand = "0.8.5"
regex = "~1.8.4"
ring = "0.16.20"
ripemd = "0.1.3"
serde = "1.0"
serde_json = "1.0"
sha256 = "=1.1.3"
stacks-core = { path = "stacks-core" }
stacks-rs = "0.1.10"
thiserror = "1.0.43"
