[workspace]
members = ["sbtc-core", "stacks-core", "romeo"]

[workspace.dependencies]
anyhow = "1.0"
array-bytes = "6.1.0"
bdk = "0.28.0"
bitcoin = "0.29.2"
clap = "4.1.1"
futures = "0.3.28"
hex = "0.4.3"
log = "0.4.19"
once_cell = "1.18.0"
p256k1 = "5.1"
rand = "0.8.5"
regex = "~1.8.4"
ring = "0.16.20"
ripemd = "0.1.3"
secp256k1 = "0.27.0"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10.7"
stacks-core = { version = "0.1.0", path = "./stacks-core"}
strum = "0.25.0"
thiserror = "1.0.43"
tokio = "1.32.0"
url = "2.4.0"
wsts = "1.2"
