[workspace]
members = ["sbtc-cli", "sbtc-core", "stacks-core", "romeo"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
backoff = "0.4.0"
bdk = "0.28.1"
clap = "4.1.1"
derivative = "2.2.0"
futures = "0.3.28"
hex = "0.4.3"
log = "0.4.19"
once_cell = "1.18.0"
p256k1 = "5.1"
rand = "0.8.5"
regex = "~1.8.4"
reqwest = "0.11.20"
ripemd = "0.1.3"
rs_merkle = "1.4.1"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10.7"
strum = "0.25.0"
thiserror = "1.0.43"
tokio = "1.32.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.4.1"
wsts = "1.2"
