[package]
name = "romeo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
bdk.workspace = true
blockstack-core = { git = "https://github.com/stacks-network/stacks-blockchain/", branch = "master" }
clap = { workspace = true, features = ["derive"] }
futures.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing-subscriber.workspace = true
tracing.workspace = true
