[package]
name = "romeo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
backoff = { workspace = true, features = ["tokio"] }
bdk = { workspace = true, features = ["rpc", "esplora", "use-esplora-async"] }
blockstack-core = { git = "https://github.com/stacks-network/stacks-blockchain/", branch = "master" }
clap = { workspace = true, features = ["derive"] }
derivative = { workspace = true }
futures.workspace = true
hex.workspace = true
rand.workspace = true
reqwest = { workspace = true, features = ["json"] }
sbtc-core = "0.1.0"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
stacks-core = { version = "0.1.0", path = "../stacks-core" }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
rs_merkle.workspace = true
