[package]
name = "sbtc-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
array-bytes.workspace = true
bdk = { workspace = true, features = ["keys-bip39"] }
clap = { workspace = true, features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
stacks-core.path = "../stacks-core"

[[bin]]
name = "sbtc"
path = "src/main.rs"
