[package]
name = "sbtc-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bdk = { workspace = true, features = ["keys-bip39", "rpc"] }
clap = { workspace = true, features = ["derive"] }
hex.workspace = true
regex.workspace = true
sbtc-core.workspace = true
sbtc-core.version = "0.1.0"
serde.workspace = true
serde_json.workspace = true
stacks-core.workspace = true
url = { workspace = true, features = ["serde"] }

[[bin]]
name = "sbtc"
path = "src/main.rs"
