[package]
name = "stacks-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Package that exposes primitives for working with the Stacks blockchain"
website = "https://www.stacks.co"
repository = "https://github.com/stacks-network/sbtc"
readme = "README.md"
keywords = ["blockchain", "stacks", "bitcoin", "blockstack", "sdk"]
categories = ["cryptography::cryptocurrencies", "data-structures", "development-tools", "finance"]

[dependencies]
bitcoin.workspace = true
hex.workspace = true
once_cell.workspace = true
regex.workspace = true
ripemd.workspace = true
secp256k1.workspace = true
serde = { workspace = true, features = ["derive"] }
sha2.workspace = true
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
hex.workspace = true
rand.workspace = true
