[package]
authors = ["Stacks Foundation <admin@stacks.co>"]
categories = ["cryptography::cryptocurrencies", "data-structures", "development-tools", "finance"]
description = "Package that exposes primitives for working with the Stacks blockchain"
edition = "2021"
keywords = ["blockchain", "stacks", "bitcoin", "blockstack", "sdk"]
license = "MIT"
name = "stacks-core"
readme = "README.md"
repository = "https://github.com/stacks-network/sbtc"
version = "0.1.0"
website = "https://www.stacks.co"

[dependencies]
bitcoin.workspace = true
hex.workspace = true
once_cell.workspace = true
regex.workspace = true
ripemd.workspace = true
secp256k1.workspace = true
serde = { workspace = true, features = ["derive"] }
sha2.workspace = true
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
hex.workspace = true
rand.workspace = true
